Upgrade Java from version 17 to 21